--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,7 +13,7 @@ Login
     <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|crispy}}
-    <input type="submit" value="Login" class="w-100 text-red text-center my-2 btn btn-info">
+    <input type="submit" value="Login" style="color:blue;" class="w-100 text-blue text-center my-2 btn btn-info">
     </form>
 </div>
 
