--- a/templates/update.html
+++ b/templates/update.html
@@ -20,7 +20,7 @@ You don't have access to this page!
     <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|crispy}}
-    <input type="submit" value="Update" class="w-100 text-white text-center my-2 btn btn-info">
+    <input type="submit" value="Update" style="color:blue;" class="w-100 text-blue text-center my-2 btn btn-info">
     </form>
 </div>
 
