--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 
     <nav>
       <a class="logo" href="{% url 'home' %}">
-        <i class="fas fa-user-circle"></i>&nbsp;Contacts
+        <i class="fas fa-user-circle"></i>&nbsp;DIU-Contacts
       </a>
       <p class="feature-link m-0 p-0">
       {% if request.user.is_authenticated %}
@@ -78,7 +78,7 @@
 
     <!-- footer -->
     <footer class="mt-4 p-2">
-      <p class="text-center p-1 m-0">&copy; My Contacts 2019</p>
+      <p class="text-center p-1 m-0">&copy; My Contacts-DIU</p>
     </footer>
     <!-- footer ends -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
