--- a/templates/create.html
+++ b/templates/create.html
@@ -13,7 +13,7 @@ Create a New Contact
     <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|crispy}}
-    <input type="submit" value="Create" class="w-100 text-white text-center my-2 btn btn-info">
+    <input type="submit" value="Create" style="color:blue;" class="w-100 text-center my-2 btn btn-info">
     </form>
 </div>
 
