--- a/templates/delete.html
+++ b/templates/delete.html
@@ -21,7 +21,7 @@ You don't have access to this page!
     <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|crispy}}
-    <input type="submit" value="Delete" class="w-100 text-white text-center my-2 btn btn-danger">
+    <input type="submit" value="Delete" style="color:blue;" class="w-100 text-blue text-center my-2 btn btn-danger">
     </form>
 </div>
 
