--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -13,7 +13,7 @@ Sign Up
     <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form|crispy}}
-    <input type="submit" value="Sign Up" class="w-100 text-white text-center my-2 btn btn-info">
+    <input type="submit" style="color:blue;" value="Sign Up"  class="w-100 text-center my-2 btn btn-info">
     </form>
 </div>
 
